--- a/About.html
+++ b/About.html
@@ -90,7 +90,7 @@
         <div class="navigation">
             <nav>
                 <ul>
-                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Gallery.html">Gallery</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Contact.html">Contact</a></li>
@@ -102,12 +102,12 @@
         <h2>About</h2>
         <br>
         <p>
-            Erin Ng started here journey as a fashion enthusiast working as a client advisor for both Nordstrom & Louis Vuitton
+            &emsp; Erin Ng started here journey as a fashion enthusiast working as a client advisor for both Nordstrom & Louis Vuitton
             where her passion for accessories and jewlery grew. She now is a multi-million jewlery designer
-            living in the lavish area of Newmarket, NH with her stud bf. They make food together, eat ice cream and have 1 cat 
-            <br>
-            Madam Ng has owned the Erin's Jewlery buisness for over 2 weeks! her drive and dedication of making the most money off of "these peasants" her consumers
-            is stronger than ever. Madam Ng continues to design and create the most modern of jewlery that is worn worldwide. 
+            Growing up in Salt Lake city, now living in the area of Newmarket, NH with her future husband. They make food together, eat ice cream and have 2 kittens named Chanel & Mochi
+            <br><br>
+            &emsp;Erin Ng has owned the Erin's Jewlery buisness for over 2 weeks! her drive, passion and dedication of making the most authentic crafted jewlery
+            is stronger than ever.
         </p>
     </body>
 </html>
