--- a/Gallery.html
+++ b/Gallery.html
@@ -91,7 +91,7 @@
         <div class="navigation">
             <nav>
                 <ul>
-                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Gallery.html">Gallery</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Contact.html">Contact</a></li>
