--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
                 background-color: red;
             }
 
+            p {
+                background-color: white;
+                width: fit-content;
+                padding: 4px;
+                border: solid black 2px;
+                margin: auto;
+                border-radius: 5px;
+
+            }
+
         </style>
     </head>
     
@@ -84,12 +94,19 @@
         <div class="navigation">
             <nav>
                 <ul>
-                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Gallery.html">Gallery</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
+
+        <br>
+        
+        <p>
+            this is where we would post news, jewelry for sale, specials or blogs type of postings
+        </p>
+
     </body>
 </html>
