--- a/Contact.html
+++ b/Contact.html
@@ -6,7 +6,7 @@
         <meta name="author" context="Jon Taylor">
 
         <title>
-            Contact
+            Kiowah/Contact
         </title>
         <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
