--- a/Gallery.html
+++ b/Gallery.html
@@ -6,7 +6,7 @@
         <meta name="author" context="Jon Taylor">
 
         <title>
-            Gallery
+            Kiowah/Gallery
         </title>
 
         <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap" rel="stylesheet">
