--- a/About.html
+++ b/About.html
@@ -77,7 +77,45 @@
                 border: solid black 2px;
                 margin: auto;
                 border-radius: 5px;
+            }
 
+            .drop {
+            cursor: pointer;
+            }
+        
+            .dropdown {
+            position: relative;
+            display: inline-block;
+            }
+
+            .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: white;
+            min-width: 160px;
+            z-index: 1;
+            }
+
+            .dropdown-content a {
+            padding: 12px 16px;
+            
+            text-decoration: none;
+            display: block;
+            }
+
+            .dropdown-content a:hover {background-color: aliceblue}
+
+            .dropdown:hover .dropdown-content {
+            display: block;
+            }
+            .nav-item {
+            display: inline-block;
+            border-radius: 5px;
+            padding: 5px; 
+            }
+
+            .nav-item:hover {
+            background-color: lightblue; /* match the li a:hover */
             }
         </style>
     </head>
@@ -91,7 +129,15 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="Gallery.html">Gallery</a></li>
+                    <div class="dropdown">
+                        <span class="drop"><li class="nav-item"><a href="Gallery.html">Gallery</a></li></span>
+                        <div class="dropdown-content">
+                            <a href="Gallery.html#Necklaces">Necklaces</a>
+                            <a href="Gallery.html#Earings">Earings</a>
+                            <a href="Gallery.html#Rings">Rings</a>
+                            <a href="Gallery.html#Nails">Nails</a>
+                        </div>
+                    </div>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
